--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="/resume.html">Resume</a>
+            <a class="nav-link" href="#">Resume</a>
             <a class="nav-link" href="#">Portfolio</a>
             <a class="nav-link" href="#">Contact</a>
           </div>
