--- a/resume.html
+++ b/resume.html
@@ -25,10 +25,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Resume</a>
-            <a class="nav-link" href="#">Portfolio</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" href="#">Resume</a>
+            <a class="nav-link disabled" href="#">Portfolio</a>
+            <a class="nav-link disabled" href="#">Contact</a>
           </div>
         </div>
       </div>
