links to my accounts

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <p class="display-1">Make your art come to life.</p>
         </div>
         <div class="d-flex justify-content-center gap-5">
-          <a href="#" class="btn btn-warning text-tertieary fw-bold btn-lg px-5 py-3">
+          <a href="/resume.html" class="btn btn-warning text-tertieary fw-bold btn-lg px-5 py-3">
             Resume
           </a>
           <a href="#" class="btn btn-outline-warning btn-lg fw-bold btn-lg px-5 py-3">
@@ -60,8 +60,8 @@
         <p class="display-1">About Me</p>
         <p class="about-text lead mb-5">My name is Philip Mark Rojas. I am confident in making concept art sketches and turning them into 3D with Blender, Animation, Character rigging, 3D printing, photoshop, drone photography, video editing, and recently got into web developmet using Javascript, html, CSS. I am also great at any social enviroment and a master martial artist.</p>.
         <div class="fs-1 d-flex justify-content-center gap-4">
-            <i class="bi bi-twitter">
-            <i class="bi bi-github text-white">
+            <a href="https://twitter.com/Le_Scientist777"><i class="bi bi-twitter">
+            <a href="https://github.com/TheScientist777"><i class="bi bi-github text-white">
             <i class="bi bi-linkedin">
           </a>
 
