fixed dulipcate icons

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
         <p class="display-1">About Me</p>
         <p class="about-text lead mb-5">My name is Philip Mark Rojas. I am confident in making concept art sketches and turning them into 3D with Blender, Animation, Character rigging, 3D printing, photoshop, drone photography, video editing, and recently got into web developmet using Javascript, html, CSS. I am also great at any social enviroment and a master martial artist.</p>.
         <div class="fs-1 d-flex justify-content-center gap-4">
-            <a href="https://twitter.com/Le_Scientist777"><i class="bi bi-twitter">
-            <a href="https://github.com/TheScientist777"><i class="bi bi-github text-white">
+            <a href="https://twitter.com/Le_Scientist777"><i class="bi bi-twitter"><style type="text/css"> .icon {background:none;} </style>
+              
+            <a href="https://github.com/TheScientist777"><i class="bi bi-github text-white"><style type="text/css"> .icon {background:none;} </style>
+
             <i class="bi bi-linkedin">
           </a>
 
