--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               
             <a href="https://github.com/TheScientist777"><i class="bi bi-github text-white">
 
-            <i class="bi bi-linkedin">
+            <i class="bi bi-linkedin" style="color: #286782";>
           </a>
 
           
