--- a/resume.html
+++ b/resume.html
@@ -36,39 +36,7 @@
   </header>
   <main>
     <section class="hero container row mx-auto gap-5 d-flex justify-content-center align-items-center">
-      <div class="hero-text col-lg-5 text-center d-flex flex-column gap-3">
-        <p class="text-uppercase">Developer | Animator | right hand manager</p>
-        <div class=" mb-5 d-flex flex-column">
-          <p class="lead fs-1 fw-lighter">With me you can</p>
-          <p class="display-1">Make your art come to life.</p>
-        </div>
-        <div class="d-flex justify-content-center gap-5">
-          <a href="#" class="btn btn-warning text-tertieary fw-bold btn-lg px-5 py-3">
-            Resume
-          </a>
-          <a href="#" class="btn btn-outline-warning btn-lg fw-bold btn-lg px-5 py-3">
-            Portfolio
-          </a>
-        </div>
-      </div>
-      <div class="hero-image rounded-4 col-lg-6 bg-warning bg-opacity-50">
-        <img class="img-fluid mx-auto d-block" src="me tux.jpeg" alt="Profile Image">
-      </div>
-    </section>
-    <section class="about bg-light-subtle">
-      <div class="container py-5 text-center d-flex flex-column">
-        <p class="display-1">About Me</p>
-        <p class="about-text lead mb-5">My name is Philip Mark Rojas. I am confident in making concept art sketches and turning them into 3D with Blender, Animation, Character rigging, 3D printing, photoshop, drone photography, video editing, and recently got into web developmet using Javascript, html, CSS. I am also great at any social enviroment and a master martial artist.</p>.
-        <div class="fs-1 d-flex justify-content-center gap-4">
-            <i class="bi bi-twitter">
-            <i class="bi bi-github text-white">
-            <i class="bi bi-linkedin">
-          </a>
-
-          
-          
-        </div>
-      </div>
+<h1>Hello There</h1>
     </section>
   </main>
   <footer>
