Resume title and bg light

--- a/resume.html
+++ b/resume.html
@@ -36,10 +36,10 @@
   </header>
   <main>
     <section class="hero container row mx-auto gap-5 d-flex justify-content-center align-items-center">
-<h1>Hello There</h1>
+<h1>Resume</h1>
     </section>
   </main>
-  <footer>
+  <footer class="bg-light-subtle">
     <nav class="py-5 container">
       <p class="text-center">Project for COSC 1315, Summer 2023</p>
     </nav>
