center Resume text

--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@
   </header>
   <main>
     <section class="hero container row mx-auto gap-5 d-flex justify-content-center align-items-center">
-<h1>Resume</h1>
+<h1 class="text-center">Resume</h1>
     </section>
   </main>
   <footer class="bg-light-subtle">
