Resume container and area-tile

--- a/resume.html
+++ b/resume.html
@@ -35,8 +35,11 @@
     </nav>
   </header>
   <main>
-    <section class="hero container row mx-auto gap-5 d-flex justify-content-center align-items-center">
-<h1 class="text-center">Resume</h1>
+    <section class="resume container row mx-auto gap-5 d-flex justify-content-center align-items-center">
+      <h1 class="text-center">Resume</h1>
+      <div>
+        .area-tile
+      </div>
     </section>
   </main>
   <footer class="bg-light-subtle">
