--- a/resume.html
+++ b/resume.html
@@ -35,10 +35,10 @@
     </nav>
   </header>
   <main>
-    <section class="resume container row mx-auto gap-5 d-flex justify-content-center align-items-center">
+     <section class="resume container row mx-auto gap-5 d-flex justify-content-center align-items-center">
       <h1 class="text-center">Resume</h1>
       <div>
-        .area-tile
+      </div class="area-tile">Experience</div>
       </div>
     </section>
   </main>
