--- a/resume.html
+++ b/resume.html
@@ -39,6 +39,7 @@
       <h1 class="text-center">Resume</h1>
       <div>
       </div class="area-tile">Experience</div>
+      <button>Dowload Resume</button>
       </div>
     </section>
   </main>
