--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
   <main>
      <section class="resume container row mx-auto gap-5 d-flex justify-content-center align-items-center">
       <h1 class="text-center">Resume</h1>
-      <div>
+      <div class="d-flex justify-content-between">
       </div class="area-tile">Experience</div>
       <button>Dowload Resume</button>
       </div>
