--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@
   </header>
   <main>
      <section class="resume container row mx-auto gap-5 d-flex justify-content-center align-items-center">
-      <h1 class="text-center">Resume</h1>
+      <h1 class="bg-danger text-center">Resume</h1>
       <div class="d-flex justify-content-between">
       </div class="area-tile">Experience</div>
       <button>Dowload Resume</button>
