--- a/resume.html
+++ b/resume.html
@@ -36,9 +36,9 @@
   </header>
   <main>
      <section class="resume container row mx-auto gap-5 d-flex justify-content-center align-items-center">
-      <h1 class="bg-danger text-center">Resume</h1>
+      <h1 class="display-1 text-center">Resume</h1>
       <div class="d-flex justify-content-between">
-      </div class="area-tile">Experience</div>
+      </div class="area-tile display-4">Experience</div>
       <button>Dowload Resume</button>
       </div>
     </section>
