--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,10 @@
       <h1 class="display-1 text-center">Resume</h1>
       <div class="d-flex justify-content-between">
       </div class="area-tile display-4">Experience</div>
-      <button class="btn btn-warning text-light-subtle">Dowload Resume</button>
+      <button class="btn btn-warning text-light-subtle">
+        <i class="bi bi-download"></i>
+        Dowload Resume
+      </button>
       </div>
     </section>
   </main>
