--- a/resume.html
+++ b/resume.html
@@ -37,13 +37,15 @@
   <main>
      <section class="resume container row mx-auto gap-5 d-flex justify-content-center align-items-center">
       <h1 class="display-1 text-center">Resume</h1>
+
       <div class="d-flex justify-content-between">
       </div class="area-tile display-4">Experience</div>
-      <button class="btn btn-warning text-light-subtle">
+      <button class="btn btn-warning text-light-subtle gap-3">
         <i class="bi bi-download"></i>
         Dowload Resume
       </button>
       </div>
+      <div class="card"></div>
     </section>
   </main>
   <footer class="bg-light-subtle">
