--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,15 @@
         Dowload Resume
       </button>
       </div>
-      <div class="card"></div>
+      <div class="card">
+       <div class="card-body">
+        <div class="row">
+         <div class="col">
+
+         </div>
+        </div>
+      </div>
+    </div>
     </section>
   </main>
   <footer class="bg-light-subtle">
