bold timeline text

--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,9 @@
        <div class="card-body">
         <div class="row">
          <div class="col">
-
+           <p class="text-warning fw-bold mb-2">2020 - Present</p>
+           <p>Formal Team Lead</p>
+           <p>Web Developmet</p>
          </div>
         </div>
       </div>
