gave experiences card bg light

--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
       <div class="card">
        <div class="card-body">
         <div class="row">
-         <div class="col">
+         <div class="col bg-light-subtle">
            <p class="text-warning fw-bold mb-2">2020 - Present</p>
            <p>Formal Team Lead</p>
            <p>Web Developmet</p>
