--- a/resume.html
+++ b/resume.html
@@ -48,11 +48,12 @@
       <div class="card">
        <div class="card-body">
         <div class="row">
-         <div class="col bg-light-subtle">
+         <div class="col bg-light-subtle p-4 rounded">
            <p class="text-warning fw-bold mb-2">2020 - Present</p>
            <p>Formal Team Lead</p>
            <p>Web Developmet</p>
          </div>
+        </div class="col">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam recusandae consequuntur facilis qui dolorum architecto minus laborum enim corporis ipsa. Labore doloribus, ullam sit tempora quod veritatis cumque ipsam delectus?</div>
         </div>
       </div>
     </div>
