changed the sizing

--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
            <p>Formal Team Lead</p>
            <p>Web Developmet</p>
          </div>
-        </div class="col">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam recusandae consequuntur facilis qui dolorum architecto minus laborum enim corporis ipsa. Labore doloribus, ullam sit tempora quod veritatis cumque ipsam delectus?</div>
+        </div class="col-8">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam recusandae consequuntur facilis qui dolorum architecto minus laborum enim corporis ipsa. Labore doloribus, ullam sit tempora quod veritatis cumque ipsam delectus?</div>
         </div>
       </div>
     </div>
