--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
       <h1 class="display-1 text-center">Resume</h1>
 
       <div class="d-flex justify-content-between">
-      </div class="area-tile display-4">Experience</div>
+      <div class="area-tile display-4">Experience</div>
       <button class="btn btn-warning text-light-subtle gap-3">
         <i class="bi bi-download"></i>
         Dowload Resume
@@ -47,13 +47,14 @@
       </div>
       <div class="card">
        <div class="card-body">
-        <div class="row">
-         <div class="col bg-light-subtle p-4 rounded">
+        <div class="row align-items-center gx-5">
+         <div class="col text-center tx-lg-start">
+         <div class=" bg-light-subtle p-4 rounded">
            <p class="text-warning fw-bold mb-2">2020 - Present</p>
-           <p>Formal Team Lead</p>
-           <p>Web Developmet</p>
+           <p class="small fw-bold">Formal Team Lead</p>
+           <p class="small">Web Developmet</p>
          </div>
-        </div class="col-8">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam recusandae consequuntur facilis qui dolorum architecto minus laborum enim corporis ipsa. Labore doloribus, ullam sit tempora quod veritatis cumque ipsam delectus?</div>
+        <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam recusandae consequuntur facilis qui dolorum architecto minus laborum enim corporis ipsa. Labore doloribus, ullam sit tempora quod veritatis cumque ipsam delectus?</div>
         </div>
       </div>
     </div>
