made experience list blue instead of white

--- a/resume.html
+++ b/resume.html
@@ -45,11 +45,11 @@
         Dowload Resume
       </button>
       </div>
-      <div class="card">
-       <div class="card-body">
+      <div class="card shadow border-0 rounded">
+       <div class="card-body p-4">
         <div class="row align-items-center gx-5">
-         <div class="col text-center tx-lg-start">
-         <div class=" bg-light-subtle p-4 rounded">
+         <div class="col text-center tx-lg-start mb-4 mb-lg-0">
+         <div class=" bg-primary-subtle p-4 rounded">
            <p class="text-warning fw-bold mb-2">2020 - Present</p>
            <p class="small fw-bold">Formal Team Lead</p>
            <p class="small">Web Developmet</p>
