--- a/resume.html
+++ b/resume.html
@@ -57,6 +57,19 @@
         <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam recusandae consequuntur facilis qui dolorum architecto minus laborum enim corporis ipsa. Labore doloribus, ullam sit tempora quod veritatis cumque ipsam delectus?</div>
         </div>
       </div>
+    </div>      <div class="card shadow border-0 rounded">
+       <div class="card-body p-4">
+        <div class="row align-items-center gx-5">
+         <div class="col text-center tx-lg-start mb-4 mb-lg-0">
+         <div class=" bg-primary-subtle p-4 rounded">
+           <p class="text-warning fw-bold mb-2">2020 - early 2023</p>
+           <p class="small fw-bold">College Student</p>
+           <p class="small">South Texas College</p>
+           <p class="small">McAllen, Tx</p>
+         </div>
+        <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam recusandae consequuntur facilis qui dolorum architecto minus laborum enim corporis ipsa. Labore doloribus, ullam sit tempora quod veritatis cumque ipsam delectus?</div>
+        </div>
+      </div>
     </div>
     </section>
   </main>
