--- a/resume.html
+++ b/resume.html
@@ -26,51 +26,54 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link" aria-current="page" href="#">Home</a>
-            <a class="nav-link active" href="#">Resume</a>
+            <a class="nav-link active" href="/resume.html">Resume</a>
             <a class="nav-link disabled" href="#">Portfolio</a>
-            <a class="nav-link disabled" href="#">Contact</a>
+            <a class="nav-link disabled">Contact</a>
           </div>
         </div>
       </div>
     </nav>
   </header>
   <main>
-     <section class="resume container row mx-auto gap-5 d-flex justify-content-center align-items-center">
+    <section class="resume container row mx-auto gap-5 d-flex justify-content-center align-items-center">
       <h1 class="display-1 text-center">Resume</h1>
-
       <div class="d-flex justify-content-between">
-      <div class="area-tile display-4">Experience</div>
-      <button class="btn btn-warning text-light-subtle gap-3">
-        <i class="bi bi-download"></i>
-        Dowload Resume
-      </button>
+        <div class="area-tile display-4"> Experience</div>
+        <button class="btn btn-warning text-light-subtle gap-3">
+          <i class="bi bi-download"></i>
+          Download Resume
+        </button>
       </div>
-      <div class="card shadow border-0 rounded">
-       <div class="card-body p-4">
-        <div class="row align-items-center gx-5">
-         <div class="col text-center tx-lg-start mb-4 mb-lg-0">
-         <div class=" bg-primary-subtle p-4 rounded">
-           <p class="text-warning fw-bold mb-2">2020 - Present</p>
-           <p class="small fw-bold">Formal Team Lead</p>
-           <p class="small">Web Developmet</p>
-         </div>
-        <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam recusandae consequuntur facilis qui dolorum architecto minus laborum enim corporis ipsa. Labore doloribus, ullam sit tempora quod veritatis cumque ipsam delectus?</div>
+      <div class="card shadow border-0 rounded bg-light-subtle">
+        <div class="card-body p-4">
+          <div class="row align-items-center gx-5">
+            <div class="col text-center text-lg-start mb-4 mb-lg-0">
+              <div class="bg-primary-subtle p-4 rounded">
+                <p class="text-warning fw-bold mb-2">2020 - Present</p>
+                <p class="small fw-bold">Formal Team Lead</p>
+                <p class="small">Web Developmet</p>
+                <p class="small">McAllen, TX</p>
+              </div>
+            </div>
+            <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet quod fugiat reiciendis assumenda dolorum ullam, molestiae qui fuga repudiandae laborum possimus ratione earum unde nemo eaque doloremque sed consequuntur.</div>
+          </div>
         </div>
       </div>
-    </div>      <div class="card shadow border-0 rounded">
-       <div class="card-body p-4">
-        <div class="row align-items-center gx-5">
-         <div class="col text-center tx-lg-start mb-4 mb-lg-0">
-         <div class=" bg-primary-subtle p-4 rounded">
-           <p class="text-warning fw-bold mb-2">2020 - early 2023</p>
-           <p class="small fw-bold">College Student</p>
-           <p class="small">South Texas College</p>
-           <p class="small">McAllen, Tx</p>
-         </div>
-        <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam recusandae consequuntur facilis qui dolorum architecto minus laborum enim corporis ipsa. Labore doloribus, ullam sit tempora quod veritatis cumque ipsam delectus?</div>
+      <div class="card shadow border-0 rounded bg-light-subtle">
+        <div class="card-body p-4">
+          <div class="row align-items-center gx-5">
+            <div class="col text-center text-lg-start mb-4 mb-lg-0">
+              <div class="bg-primary-subtle p-4 rounded">
+                <p class="text-warning fw-bold mb-2">2020 - early 2023</p>
+                <p class="small fw-bold">College Student</p>
+                <p class="small">South Texas College</p>
+                <p class="small">McAllen, Tx</p>
+              </div>
+            </div>
+            <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet quod fugiat reiciendis assumenda dolorum ullam, molestiae qui fuga repudiandae laborum possimus ratione earum unde nemo eaque doloremque sed consequuntur.</div>
+          </div>
         </div>
       </div>
-    </div>
     </section>
   </main>
   <footer class="bg-light-subtle">
