added extra downlad button

--- a/resume.html
+++ b/resume.html
@@ -37,6 +37,7 @@
   <main>
     <section class="resume container row mx-auto gap-5 d-flex justify-content-center align-items-center">
       <h1 class="display-1 text-center">Resume</h1>
+      <div class="expirience"></div>
       <div class="d-flex justify-content-between">
         <div class="area-tile display-4"> Experience</div>
         <button class="btn btn-warning text-light-subtle gap-3">
@@ -74,6 +75,13 @@
           </div>
         </div>
       </div>
+      <div class="expirience"></div>
+      <div class="d-flex justify-content-between">
+        <div class="area-tile display-4"> Experience</div>
+        <button class="btn btn-warning text-light-subtle gap-3">
+          <i class="bi bi-download"></i>
+          Download Resume
+        </button>
     </section>
   </main>
   <footer class="bg-light-subtle">
