--- a/resume.html
+++ b/resume.html
@@ -77,11 +77,7 @@
       </div>
       <div class="expirience"></div>
       <div class="d-flex justify-content-between">
-        <div class="area-tile display-4"> Experience</div>
-        <button class="btn btn-warning text-light-subtle gap-3">
-          <i class="bi bi-download"></i>
-          Download Resume
-        </button>
+        <div class="area-tile display-4"> Education</div>
     </section>
   </main>
   <footer class="bg-light-subtle">
