bolded second text

--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
         <div class="card-body p-4">
           <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
-              <div class="bg-primary-subtle p-4 rounded">
+              <div class="bg-primary-subtle text-bg-secondary p-4 rounded">
                 <p class="text-warning fw-bold mb-2">2020 - early 2023</p>
                 <p class="small fw-bold">College Student</p>
                 <p class="small">South Texas College</p>
@@ -83,8 +83,8 @@
         <div class="card-body p-4">
           <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
-              <div class="bg-primary-subtle p-4 rounded">
-                <p class="text-warning fw-bold mb-2">2020 - early 2023</p>
+              <div class="bg-primary-subtle text-bg-subtle p-4 rounded">
+                <p class="text-primary fw-bold mb-2">2020 - early 2023</p>
                 <p class="small fw-bold">South Texas College</p>
                 <p class="fst-italic">Associcate <br> Computer Science</p> 
               </div>
