--- a/resume.html
+++ b/resume.html
@@ -50,10 +50,9 @@
           <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
               <div class="bg-primary-subtle p-4 rounded">
-                <p class="text-warning fw-bold mb-2">2020 - Present</p>
-                <p class="small fw-bold">Formal Team Lead</p>
-                <p class="small">Web Developmet</p>
-                <p class="small">McAllen, TX</p>
+                <p class="text-warning fw-bold mb-2">2023</p>
+                <p class="small fw-bold">Play Manager</p>
+                <p class="small">Cooper Center<br>McAllen, USA</p>
               </div>
             </div>
             <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet quod fugiat reiciendis assumenda dolorum ullam, molestiae qui fuga repudiandae laborum possimus ratione earum unde nemo eaque doloremque sed consequuntur.</div>
@@ -65,10 +64,9 @@
           <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
               <div class="bg-primary-subtle text-bg-secondary p-4 rounded">
-                <p class="text-warning fw-bold mb-2">2020 - early 2023</p>
-                <p class="small fw-bold">College Student</p>
-                <p class="small">South Texas College</p>
-                <p class="small">McAllen, Tx</p>
+                <p class="text-warning fw-bold mb-2">2020 - 2021</p>
+                <p class="small fw-bold">Assistant Manager</p>
+                <p class="small">South Texas Propane<br>Edinburg, USA</p>
               </div>
             </div>
             <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet quod fugiat reiciendis assumenda dolorum ullam, molestiae qui fuga repudiandae laborum possimus ratione earum unde nemo eaque doloremque sed consequuntur.</div>
