changed from yellow to blue

--- a/resume.html
+++ b/resume.html
@@ -82,7 +82,7 @@
           <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
               <div class="bg-primary-subtle text-bg-secondary p-4 rounded">
-                <p class="text-primary fw-bold mb-2">2020 - early 2023</p>
+                <p class="text-warning fw-bold mb-2">2020 - early 2023</p>
                 <p class="small fw-bold">South Texas College</p>
                 <p class="fst-italic">Associcate <br> Computer Science</p> 
               </div>
