--- a/resume.html
+++ b/resume.html
@@ -51,8 +51,8 @@
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
               <div class="bg-primary-subtle p-4 rounded">
                 <p class="text-warning fw-bold mb-2">2023</p>
-                <p class="small fw-bold">Play Manager</p>
-                <p class="small">Cooper Center<br>McAllen, USA</p>
+                <p class="fs-4 fw-bold">Play Manager</p>
+                <p class="fst-italic">Cooper Center<br>McAllen, USA</p>
               </div>
             </div>
             <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet quod fugiat reiciendis assumenda dolorum ullam, molestiae qui fuga repudiandae laborum possimus ratione earum unde nemo eaque doloremque sed consequuntur.</div>
@@ -65,8 +65,8 @@
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
               <div class="bg-primary-subtle text-bg-secondary p-4 rounded">
                 <p class="text-warning fw-bold mb-2">2020 - 2021</p>
-                <p class="small fw-bold">Assistant Manager</p>
-                <p class="small">South Texas Propane<br>Edinburg, USA</p>
+                <p class="fs-4 fw-bold">Assistant Manager</p>
+                <p class="fst-italic">South Texas Propane<br>Edinburg, USA</p>
               </div>
             </div>
             <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet quod fugiat reiciendis assumenda dolorum ullam, molestiae qui fuga repudiandae laborum possimus ratione earum unde nemo eaque doloremque sed consequuntur.</div>
@@ -77,13 +77,13 @@
       <div class="d-flex justify-content-between">
         <div class="area-tile display-4"> Education</div>
       </div>
-      <div class="card shadow border-0 rounded bg-light-subtle">
+      <div class="card shadow border-0 rounded bg-primary-subtle">
         <div class="card-body p-4">
           <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
-              <div class="bg-primary-subtle text-bg-secondary p-4 rounded">
+              <div class="bg-light-subtle text-bg-secondary p-4 rounded">
                 <p class="text-warning fw-bold mb-2">2020 - early 2023</p>
-                <p class="small fw-bold">South Texas College</p>
+                <p class=" fw-bold">South Texas College</p>
                 <p class="fst-italic">Associcate <br> Computer Science</p> 
               </div>
             </div>
