--- a/resume.html
+++ b/resume.html
@@ -82,7 +82,7 @@
           <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
               <div class="bg-light-subtle text-bg-secondary p-4 rounded">
-                <p class="text-warning fw-bold mb-2">2020 - early 2023</p>
+                <p class="text-primary-emphasis fw-bold mb-2">2020 - early 2023</p>
                 <p class=" fw-bold">South Texas College</p>
                 <p class="fst-italic">Associcate <br> Computer Science</p> 
               </div>
@@ -91,15 +91,14 @@
           </div>
         </div>
       </div>
-      <div class="card shadow border-0 rounded bg-light-subtle">
+      <div class="card shadow border-0 rounded bg-primary-subtle">
         <div class="card-body p-4">
           <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
-              <div class="bg-primary-subtle p-4 rounded">
-                <p class="text-warning fw-bold mb-2">2020 - early 2023</p>
-                <p class="small fw-bold">College Student</p>
-                <p class="small">South Texas College</p>
-                <p class="small">McAllen, Tx</p>
+              <div class="bg-light-subtle text-bg-secondary p-4 rounded">
+                <p class="text-primary-emphasis fw-bold mb-2">2020 - early 2023</p>
+                <p class=" fw-bold">College Student</p>
+                <p class="fst-italic">South Texas College<br>>McAllen, Tx</p>
               </div>
             </div>
             <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet quod fugiat reiciendis assumenda dolorum ullam, molestiae qui fuga repudiandae laborum possimus ratione earum unde nemo eaque doloremque sed consequuntur.</div>
