--- a/resume.html
+++ b/resume.html
@@ -96,15 +96,16 @@
           <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
               <div class="bg-light-subtle text-bg-secondary p-4 rounded">
-                <p class="text-primary-emphasis fw-bold mb-2">2020 - early 2023</p>
+                <p class="text-primary-emphasis fw-bold mb-2">2020 - present</p>
                 <p class=" fw-bold">College Student</p>
-                <p class="fst-italic">South Texas College<br>>McAllen, Tx</p>
+                <p class="fst-italic">UTRGV<br>McAllen, Tx</p>
               </div>
             </div>
             <div class="col-lg-8 fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum eveniet quod fugiat reiciendis assumenda dolorum ullam, molestiae qui fuga repudiandae laborum possimus ratione earum unde nemo eaque doloremque sed consequuntur.</div>
           </div>
         </div>
       </div>
+      <div class="card mt-5 bg-light-subtle border-0 rounded">test</div>
     </section>
   </main>
   <footer class="bg-light-subtle">
