--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
           <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
               <div class="bg-primary-subtle text-bg-secondary p-4 rounded">
-                <p class="text-warning fw-bold mb-2">2020 - 2021</p>
+                <p class="text-warning fw-bold mb-2">2012 - 2021</p>
                 <p class="fs-4 fw-bold">Assistant Manager</p>
                 <p class="fst-italic">South Texas Propane<br>Edinburg, USA</p>
               </div>
@@ -96,7 +96,7 @@
           <div class="row align-items-center gx-5">
             <div class="col text-center text-lg-start mb-4 mb-lg-0">
               <div class="bg-light-subtle text-bg-secondary p-4 rounded">
-                <p class="text-primary-emphasis fw-bold mb-2">2020 - present</p>
+                <p class="text-primary-emphasis fw-bold mb-2">2023 - present</p>
                 <p class=" fw-bold">College Student</p>
                 <p class="fst-italic">UTRGV<br>McAllen, Tx</p>
               </div>
@@ -106,6 +106,15 @@
         </div>
       </div>
       <div class="card mt-5 bg-light-subtle border-0 rounded">test</div>
+      <div class="card-body p-4"></div>
+      <div class="skills">
+<div class="skills-title d-flex align-items-center">
+  Icon
+  <h3>Professional Skills</h3>k
+      </div>
+      <div class="languages">
+
+      </div>
     </section>
   </main>
   <footer class="bg-light-subtle">
