added screw drive and wrench

--- a/resume.html
+++ b/resume.html
@@ -105,11 +105,13 @@
           </div>
         </div>
       </div>
-      <div class="card mt-5 bg-light-subtle border-0 rounded">test</div>
+      <div class="card mt-5 bg-light-subtle border-0 rounded"></div>
       <div class="card-body p-4"></div>
       <div class="skills">
 <div class="skills-title d-flex align-items-center">
-  Icon
+  <span class="material-icons">
+    construction
+    </span>
   <h3>Professional Skills</h3>k
       </div>
       <div class="languages">
