--- a/resume.html
+++ b/resume.html
@@ -109,9 +109,7 @@
       <div class="card-body p-4"></div>
       <div class="skills">
 <div class="skills-title d-flex align-items-center">
-  <span class="material-icons">
-    construction
-    </span>
+  <i class="bi bi-tools"></i>
   <h3>Professional Skills</h3>k
       </div>
       <div class="languages">
