--- a/resume.html
+++ b/resume.html
@@ -105,14 +105,15 @@
           </div>
         </div>
       </div>
-      <div class="card mt-5 bg-light-subtle border-0 rounded"></div>
-      <div class="card-body p-4"></div>
-      <div class="skills">
-<div class="skills-title d-flex align-items-center">
-  <i class="bi bi-tools"></i>
-  <h3>Professional Skills</h3>k
-      </div>
-      <div class="languages">
+      <div class="card mt-5 bg-light-subtle border-0 rounded">
+        <div class="card-body p-4"></div>
+         <div class="skills">
+          <div class="skills-title d-flex align-items-center gap-2">
+            <i class="bi bi-tools display-6"></i>
+            <h3 class="mb-0 display-5 fw-bold">Professional Skills</h3>k
+          </div>
+         </div>
+         <div class="languages">
 
       </div>
     </section>
