added columns for skills

--- a/resume.html
+++ b/resume.html
@@ -110,8 +110,15 @@
          <div class="skills">
           <div class="skills-title d-flex align-items-center gap-2">
             <i class="bi bi-tools display-6"></i>
-            <h3 class="mb-0 display-5 fw-bold">Professional Skills</h3>k
+            <h3 class="mb-0 display-5 fw-bold">Professional Skills</h3>
           </div>
+          <div class="row row-cols-1 row-cols-lg-3"></div>
+          <p>One</p>
+          <p>Two</p>
+          <p>Three</p>
+          <p>Four</p>
+          <p>Five</p>
+          <p>Six</p>
          </div>
          <div class="languages">
 
