--- a/resume.html
+++ b/resume.html
@@ -113,12 +113,12 @@
             <h3 class="mb-0 display-5 fw-bold">Professional Skills</h3>
           </div>
           <div class="row row-cols-1 row-cols-lg-3"></div>
-          <p>One</p>
-          <p>Two</p>
-          <p>Three</p>
-          <p>Four</p>
-          <p>Five</p>
-          <p>Six</p>
+          <p class="col">One</p>
+          <p class="col">Two</p>
+          <p class="col">Three</p>
+          <p class="col">Four</p>
+          <p class="col">Five</p>
+          <p class="col">Six</p>
          </div>
          <div class="languages">
 
