testing first column change

--- a/resume.html
+++ b/resume.html
@@ -113,7 +113,12 @@
             <h3 class="mb-0 display-5 fw-bold">Professional Skills</h3>
           </div>
           <div class="row row-cols-1 row-cols-lg-3"></div>
-          <p class="col mb-4 px-5 py-2 rounded text-center bg-primary-subtle">One</p>
+            <div class="col mb-4">
+              <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+
+                One
+              </p>
+            </div>
           <p class="col mb-4 px-5 py-2 rounded text-center bg-primary-subtle">Two</p>
           <p class="col mb-4 px-5 py-2 rounded text-center bg-primary-subtle">Three</p>
           <p class="col mb-4 px-5 py-2 rounded text-center bg-primary-subtle">Four</p>
