applied all changes to coulmns

--- a/resume.html
+++ b/resume.html
@@ -119,11 +119,36 @@
                 One
               </p>
             </div>
-          <p class="col mb-4 px-5 py-2 rounded text-center bg-primary-subtle">Two</p>
-          <p class="col mb-4 px-5 py-2 rounded text-center bg-primary-subtle">Three</p>
-          <p class="col mb-4 px-5 py-2 rounded text-center bg-primary-subtle">Four</p>
-          <p class="col mb-4 px-5 py-2 rounded text-center bg-primary-subtle">Five</p>
-          <p class="col mb-4 px-5 py-2 rounded text-center bg-primary-subtle">Six</p>
+            <div class="col mb-4">
+              <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+
+                Two
+              </p>
+            </div>
+            <div class="col mb-4">
+              <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+
+                Three
+              </p>
+            </div>
+            <div class="col mb-4">
+              <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+
+                Four
+              </p>
+            </div>
+            <div class="col mb-4">
+              <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+
+                Five
+              </p>
+            </div>
+            <div class="col mb-4">
+              <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+
+                Six
+              </p>
+            </div>
          </div>
          <div class="languages">
 
