added languages box

--- a/resume.html
+++ b/resume.html
@@ -150,7 +150,51 @@
               </p>
             </div>
          </div>
-         <div class="languages">
+         <div class="card mt-5 bg-light-subtle border-0 rounded">
+          <div class="card-body p-4"></div>
+           <div class="languages">
+            <div class="languages-title d-flex align-items-center gap-2">
+              <i class="bi bi-tools display-6"></i>
+              <h3 class="mb-0 display-5 fw-bold">Languages</h3>
+            </div>
+            <div class="row row-cols-1 row-cols-lg-3"></div>
+              <div class="col mb-4">
+                <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+  
+                  One
+                </p>
+              </div>
+              <div class="col mb-4">
+                <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+  
+                  Two
+                </p>
+              </div>
+              <div class="col mb-4">
+                <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+  
+                  Three
+                </p>
+              </div>
+              <div class="col mb-4">
+                <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+  
+                  Four
+                </p>
+              </div>
+              <div class="col mb-4">
+                <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+  
+                  Five
+                </p>
+              </div>
+              <div class="col mb-4">
+                <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+  
+                  Six
+                </p>
+              </div>
+           </div>
 
       </div>
     </section>
