--- a/resume.html
+++ b/resume.html
@@ -154,7 +154,7 @@
           <div class="card-body p-4"></div>
            <div class="languages">
             <div class="languages-title d-flex align-items-center gap-2">
-              <i class="bi bi-tools display-6"></i>
+              <i class="bi bi-code-square display-6"></i>
               <h3 class="mb-0 display-5 fw-bold">Languages</h3>
             </div>
             <div class="row row-cols-1 row-cols-lg-3"></div>
