--- a/resume.html
+++ b/resume.html
@@ -155,43 +155,43 @@
            <div class="languages">
             <div class="languages-title d-flex align-items-center gap-2">
               <i class="bi bi-code-square display-6"></i>
-              <h3 class="mb-0 display-5 fw-bold">Languages</h3>
+              <h3 class="mb-0 display-5 fw-bold">Progamming Languages</h3>
             </div>
             <div class="row row-cols-1 row-cols-lg-3"></div>
               <div class="col mb-4">
                 <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
   
-                  One
+                  JavaScript
                 </p>
               </div>
               <div class="col mb-4">
                 <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
   
-                  Two
+                  Python
                 </p>
               </div>
               <div class="col mb-4">
                 <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
   
-                  Three
+                  TypeScript
                 </p>
               </div>
               <div class="col mb-4">
                 <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
   
-                  Four
+                  Java
                 </p>
               </div>
               <div class="col mb-4">
                 <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
   
-                  Five
+                  C#
                 </p>
               </div>
               <div class="col mb-4">
-                <p class="bg-primary-subtle rounded px-5 py-3 text-center text-warning">
+                <p class="bg-dark rounded px-5 py-3 text-center text-primary-emphasis">
   
-                  Six
+                  C++
                 </p>
               </div>
            </div>
