--- a/index .html
+++ b/index .html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="/resume.html">Resume</a>
+            <a class="nav-link" href="resume.html">Resume</a>
             <a class="nav-link" href="#">Portfolio</a>
             <a class="nav-link" href="#">Contact</a>
           </div>
@@ -43,7 +43,7 @@
           <p class="display-1">Make your art come to life.</p>
         </div>
         <div class="d-flex justify-content-center gap-5">
-          <a href="/resume.html" class="btn btn-warning text-tertieary fw-bold btn-lg px-5 py-3">
+          <a href="resume.html" class="btn btn-warning text-tertieary fw-bold btn-lg px-5 py-3">
             Resume
           </a>
           <a href="#" class="btn btn-outline-warning btn-lg fw-bold btn-lg px-5 py-3">
@@ -52,7 +52,7 @@
         </div>
       </div>
       <div class="hero-image rounded-4 col-lg-6 bg-warning bg-opacity-50">
-        <img class="img-fluid mx-auto d-block" src="/me.jpg" alt="Profile Image">
+        <img class="img-fluid mx-auto d-block" src="me.jpg" alt="Profile Image">
       </div>
     </section>
     <section class="about bg-light-subtle">
