--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="resume.html">Resume</a>
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="portolio.html">Portfolio</a>
             <a class="nav-link" href="#">Contact</a>
           </div>
         </div>
