fixed screenshot not appearing

--- a/portolio.html
+++ b/portolio.html
@@ -48,7 +48,7 @@
                     random answer. The game was created using HTML, CSS, and JavaScript.</p>
                   <a class="btn btn-warning" href="/magic-ball">View Project</a>
                 </div>
-                <img class="col-lg-6 rounded mx-auto d-none d-lg-block" src="./mb.png" alt="Magic Ball Screenshot" />
+                <img class="col-lg-6 rounded mx-auto d-none d-lg-block" src="Magic Ball.jpg" alt="Magic Ball Screenshot" />
               </div>
             </div>
           </div>
