link for magic ball web

--- a/portolio.html
+++ b/portolio.html
@@ -46,7 +46,7 @@
                   <h2 class="fw-bolder">Magic Ball</h2>
                   <p class="text-muted">Magic Ball is a simple game that allows the user to ask a question and get a
                     random answer. The game was created using HTML, CSS, and JavaScript.</p>
-                  <a class="btn btn-warning" href="/magic-ball">View Project</a>
+                  <a class="btn btn-warning" href="https://thescientist777.github.io/Magic-8-Ball/">View Project</a>
                 </div>
                 <img class="col-lg-6 rounded mx-auto d-none d-lg-block" src="Magic Ball.jpg" alt="Magic Ball Screenshot" />
               </div>
