--- a/resume.html
+++ b/resume.html
@@ -27,8 +27,8 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link" aria-current="page" href="#">Home</a>
             <a class="nav-link active" href="/resume.html">Resume</a>
-            <a class="nav-link disabled" href="#">Portfolio</a>
-            <a class="nav-link disabled">Contact</a>
+            <a class="nav-link" href="portolio.html">Portfolio</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </div>
         </div>
       </div>
