--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link" aria-current="page" href="#">Home</a>
-            <a class="nav-link active" href="/resume.html">Resume</a>
+            <a class="nav-link active" href="resume.html">Resume</a>
             <a class="nav-link" href="portolio.html">Portfolio</a>
             <a class="nav-link" href="contact.html">Contact</a>
           </div>
