--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
   <main>
     <section class="portfolio container row mx-auto gap-5 d-flex justify-content-center align-items-center">
       <h1 class="display-1 text-center">Contact</h1>
-      <h3>For any Inquiry</h3>
+      <h3 class="display-4 text-center">For any Inquiry, let's talk</h3>
       <div class="row gx-5 justify-content-center">
         <div class="col-lg-11 col-xl-9 col-xxl-8">
           <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
