--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,10 @@
       <h1 class="display-1 text-center">Contact</h1>
       <h3 class="display-4 text-center">For any Inquiry, let's talk</h3>
       <div class="row gx-5 justify-content-center">
+        <form>
+          <div class="form-floating"></div>
+           <input id="name" class="form-control" type="text" placeholder="Enter your name">
+           <label for="name">Full Name</label>
       </div>
     </section>
   </main>
