--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
            <input id="name" class="form-control" type="text" placeholder="Enter your name">
            <label for="name">Full Name</label>
       </div>
+    </form>
     </section>
   </main>
   <footer class="bg-light-subtle">
