--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
       <div class="row gx-5 justify-content-center">
         <form>
           <div class="form-floating"></div>
-           <input id="name" class="form-control" type="text" placeholder="Enter your name">
-           <label for="name">Full Name</label>
+           <input id="name" class="form-control text-light" type="text" placeholder="Full Name">
+           <label for="name"></label>
       </div>
     </form>
     </section>
