added gap between boxes

--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,12 @@
       <h1 class="display-1 text-center">Contact</h1>
       <h3 class="display-4 text-center">For any Inquiry, let's talk</h3>
       <div class="row gx-5 justify-content-center">
-        <form>
+        <form class="row gap-2">
           <div class="form-floating"></div>
+           <input id="name" class="form-control text-light" type="text" placeholder="Full Name">
+           <label for="name"></label>
+      </div>         
+           <div class="form-floating"></div>
            <input id="name" class="form-control text-light" type="text" placeholder="Full Name">
            <label for="name"></label>
       </div>
