--- a/contact.html
+++ b/contact.html
@@ -39,14 +39,14 @@
       <h1 class="display-1 text-center">Contact</h1>
       <h3 class="display-4 text-center">For any Inquiry, let's talk</h3>
       <div class="row gx-5 justify-content-center">
-        <form class="row gap-2">
+        <form class="row">
           <div class="form-floating"></div>
            <input id="name" class="form-control text-light" type="text" placeholder="Full Name">
            <label for="name"></label>
       </div>         
            <div class="form-floating"></div>
-           <input id="name" class="form-control text-light" type="text" placeholder="Full Name">
-           <label for="name"></label>
+           <input id="email" class="form-control text-light" type="text" placeholder="Full Name">
+           <label for="email">Email</label>
       </div>
     </form>
     </section>
