fixed email box

--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
            <label for="name"></label>
       </div>         
            <div class="form-floating"></div>
-           <input id="email" class="form-control text-light" type="text" placeholder="Full Name">
-           <label for="email">Email</label>
+           <input id="email" class="form-control text-light" type="text" placeholder="Email">
+           <label for="email"></label>
       </div>
     </form>
     </section>
