--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
       <h1 class="display-1 text-center">Contact</h1>
       <h3 class="display-4 text-center">For any Inquiry, let's talk</h3>
       <div class="row gx-5 justify-content-center">
-        <form class="row">
+        <form class="d-flex flex-column">
           <div class="form-floating"></div>
            <input id="name" class="form-control text-light" type="text" placeholder="Full Name">
            <label for="name"></label>
@@ -47,6 +47,11 @@
            <div class="form-floating"></div>
            <input id="email" class="form-control text-light" type="text" placeholder="Email">
            <label for="email"></label>
+      </div>      
+          </div>         
+           <div class="form-floating"></div>
+           <textarea id="message" class="form-control text-light" type="text" placeholder="Message"></textarea>
+           <label for="message"></label>
       </div>
     </form>
     </section>
