--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,13 @@
            <input id="name" class="form-control text-light" type="text" placeholder="Full Name">
            <label for="name"></label>
       </div>         
-           <div class="form-floating"></div>
+          <div class="form-floating"></div>
            <input id="email" class="form-control text-light" type="text" placeholder="Email">
            <label for="email"></label>
+      </div>             
+          <div class="form-floating"></div>
+           <input id="phone" class="form-control text-light" type="text" placeholder="Phone">
+           <label for="phone"></label>
       </div>      
           </div>         
            <div class="form-floating"></div>
