added space for message box

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
       </div>      
           </div>         
            <div class="form-floating"></div>
-           <textarea id="message" class="form-control text-light" type="text" placeholder="Message"></textarea>
+           <textarea id="message" rows="10" class="form-control text-light" type="text" placeholder="Message"></textarea>
            <label for="message"></label>
       </div>
     </form>
