--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
            <textarea id="message" rows="10" class="form-control text-light" type="text" placeholder="Message"></textarea>
            <label for="message"></label>
       </div>
-      <button class="btn btn-danger">Submit</button>
+      <button class="btn btn-warning">Submit</button>
     </form>
     </section>
   </main>
