--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
   </header>
   <main>
     <section class="portfolio container row mx-auto gap-5 d-flex justify-content-center align-items-center">
+      <div class ="col">
       <h1 class="display-1 text-center">Contact</h1>
       <h3 class="display-4 text-center">For any Inquiry, let's talk</h3>
       <div class="row gx-5 justify-content-center">
@@ -60,6 +61,7 @@
       <button class="btn btn-warning">Submit</button>
     </form>
     </section>
+  </div>
   </main>
   <footer class="bg-light-subtle">
     <nav class="py-5 container">
