Tweaked contact and inquiry

--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,10 @@
     </nav>
   </header>
   <main>
-    <section class="portfolio container row mx-auto gap-5 d-flex justify-content-center align-items-center">
+    <section class="portfolio container mx-auto">
       <div class ="col">
-      <h1 class="display-1 text-center">Contact</h1>
-      <h3 class="display-4 text-center">For any Inquiry, let's talk</h3>
+      <h1 class="display-1 text-center mb-3">Contact</h1>
+      <h3 class="display-4 text-center mb-5">For any Inquiry, let's talk</h3>
       <div class="row gx-5 justify-content-center">
         <form class="d-flex flex-column">
           <div class="form-floating"></div>
