--- a/contact.html
+++ b/contact.html
@@ -42,20 +42,20 @@
       <div class="row gx-5 justify-content-center">
         <form class="d-flex flex-column">
           <div class="form-floating"></div>
-           <input id="name" class="form-control text-light" type="text" placeholder="Full Name">
+           <input id="name" class="form-control text-light" type="text" placeholder="Full Name" required>
            <label for="name"></label>
       </div>         
           <div class="form-floating"></div>
-           <input id="email" class="form-control text-light" type="text" placeholder="Email">
+           <input id="email" class="form-control text-light" type="text" placeholder="Email" required>
            <label for="email"></label>
       </div>             
           <div class="form-floating"></div>
-           <input id="phone" class="form-control text-light" type="text" placeholder="Phone">
+           <input id="phone" class="form-control text-light" type="text" placeholder="Phone" required>
            <label for="phone"></label>
       </div>      
           </div>         
            <div class="form-floating"></div>
-           <textarea id="message" rows="10" class="form-control text-light" type="text" placeholder="Message"></textarea>
+           <textarea id="message" rows="10" class="form-control text-light" type="text" placeholder="Message" required></textarea>
            <label for="message"></label>
       </div>
       <button class="btn btn-warning">Submit</button>
