--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link" aria-current="page" href="#">Home</a>
-            <a class="nav-link " href="resume.html">Resume</a>
-            <a class="nav-link " href="portfolio.html">Portfolio</a>
+            <a class="nav-link " href="/resume.html">Resume</a>
+            <a class="nav-link" href="/portfolio.html">Portfolio</a>
             <a class="nav-link active" href="/contact.html">Contact</a>
           </div>
         </div>
@@ -35,33 +35,38 @@
     </nav>
   </header>
   <main>
-    <section class="portfolio container mx-auto">
-      <div class ="col">
-      <h1 class="display-1 text-center mb-3">Contact</h1>
-      <h3 class="display-4 text-center mb-5">For any Inquiry, let's talk</h3>
-      <div class="row gx-5 justify-content-center">
-        <form class="d-flex flex-column">
-          <div class="form-floating"></div>
-           <input id="name" class="form-control text-light" type="text" placeholder="Full Name" required>
-           <label for="name"></label>
-      </div>         
-          <div class="form-floating"></div>
-           <input id="email" class="form-control text-light" type="text" placeholder="Email" required>
-           <label for="email"></label>
-      </div>             
-          <div class="form-floating"></div>
-           <input id="phone" class="form-control text-light" type="text" placeholder="Phone" required>
-           <label for="phone"></label>
-      </div>      
-          </div>         
-           <div class="form-floating"></div>
-           <textarea id="message" rows="10" class="form-control text-light" type="text" placeholder="Message" required></textarea>
-           <label for="message"></label>
+    <section class="portfolio container  mx-auto">
+      <div class="row">
+        <div class="col col-md-10 col-lg-8 col-xl-7 mx-auto">
+          <h1 class="display-1 text-center mb-3">Contact</h1>
+          <h3 class="display-4 text-center mb-5">For any Inquiry, let's talk</h3>
+          <div class="row gx-5 justify-content-center">
+            <form class="d-flex flex-column gap-4">
+              <div class="form-floating">
+                <input id="name" class="form-control text-light" type="text" placeholder="Enter your name" required>
+                <label for="name"><span class="text-danger">*</span> Full Name</label>
+              </div>
+              <div class="form-floating">
+                <input id="email" class="form-control text-light" type="email" placeholder="Enter your email" required>
+                <label for="email"><span class="text-danger">*</span> Email</label>
+              </div>
+              <div class="form-floating">
+                <input id="phone" class="form-control text-light" type="tel" placeholder="Enter your Phone">
+                <label for="phone">Phone Number</label>
+              </div>
+              <div class="form-floating">
+                <textarea id="message" class="form-control text-light h-100" placeholder="Enter your Phone"></textarea>
+                <label for="message">Message</label>
+              </div>
+              <div class="text-muted small">
+                <span class="text-danger">*</span> Required Field
+              </div>
+              <button class="btn btn-warning btn-lg">Submit</button>
+            </form>
+          </div>
+        </div>
       </div>
-      <button class="btn btn-warning">Submit</button>
-    </form>
     </section>
-  </div>
   </main>
   <footer class="bg-light-subtle">
     <nav class="py-5 container">
