--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
                     random answer. The game was created using HTML, CSS, and JavaScript.</p>
                   <a class="btn btn-warning" href="https://thescientist777.github.io/Magic-8-Ball/">View Project</a>
                 </div>
-                <img class="col-lg-6 rounded mx-auto d-none d-lg-block" src="Magic Ball.jpg" alt="Magic Ball Screenshot" />
+                <img class="col-lg-6 rounded mx-auto d-none d-lg-block" src="/magic ball.jpg" alt="Magic Ball Screenshot" />
               </div>
             </div>
           </div>
